package Tablero;

public abstract class EstadoHexagono {

    public abstract void intentarProducir(Hexagono hexagono);

}
