package Tablero;

public class Libre extends EstadoHexagono{

    public void intentarProducir(Hexagono hexagono){
        hexagono.producir();
    }

}


